# IATD-SOAT-HACKTON-DIAGRAM-ANALYZER

./: .docker.env.example  .env copy.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  fix_tests.py  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: architecture.instructions.md  code-quality.instructions.md  dependencies.instructions.md  dependency-injection.instructions.md  python-conventions.instructions.md  testing.instructions.md
.github/prompts/: plan-setupTestcontainersWithLocalstack.prompt.md  plan-sqsQueueListener.prompt.md
.github/skills/behavior-test/: GETTING_STARTED.md  SKILL.md
.github/skills/behavior-test/examples/: diagram_analysis_example.md
.github/skills/behavior-test/references/: environment_template.py  (+2 more)
.github/skills/integration-test/: SKILL.md
.github/skills/run-diagram-service/: SKILL.md
.github/skills/unit-test/: SKILL.md
.github/workflows/: ci.yml
app/: __init__.py
app/adapter/driven/: __init__.py
app/adapter/driver/: __init__.py
app/core/: __init__.py
app/core/application/: __init__.py  exceptions.py
app/infrastructure/: observability.py
app/infrastructure/config/: settings.py
app/infrastructure/logging/: config.py  correlation.py
features/: environment.py
tests/: conftest.py
tests/integration/: conftest.py  test_connection_detection.py  test_diagram_detection.py  test_diagram_upload_listener.py  test_ocr_extraction.py  test_pdf_conversion.py  test_processing_start_endpoint.py  test_s3_file_storage.py  test_s3_operations.py  test_sqs_operations.py
(+78 files in other folders)
